add applications stages
add applications stages method
