# controllers/clients.controller.js
@@ -109,8 +109,8 @@ exports.findClientsApplicationProductsById = (req, res) => {
             return {
                 id: item.id,
                 name: item.product_name,
-                date: item.d_clients_application.application_date.toDateString(),
-                time: item.d_clients_application.application_time.toTimeString(),
+                date: item.d_clients_application.application_date.toLocaleDateString(),
+                time: item.d_clients_application.application_time.toLocaleTimeString(),
                 count: item.count_product,
                 price: item.price,
                 paid: item.d_clients_application_pay_detail.reduce(function (sum, el) {
@@ -118,6 +118,47 @@ exports.findClientsApplicationProductsById = (req, res) => {
                 }, 0)
             };
         })); 
+    }).catch(err => {
+        res.status(500).send({
+            message:
+                err.message || "Error"
+        });
+    });
+};
+
+exports.findClientsApplicationStagesById = (req, res) => {
+    const applicationId = req.query.application_id,
+        errors = validationResult(req);
+    if (!errors.isEmpty())
+        return res.status(422).json({ errors: errors.array() });
+
+    context.d_clients_application_routes_stage.findMany({
+        where: {
+            d_clients_application_id: applicationId
+        },
+        include:{
+            s_routes_stage: {
+                select:{
+                    stage_name: true
+                }
+            },
+        }
+    }).then(data => {
+         res.status(200).send(data.map(item => {
+            return {
+                id: item.id,
+                stage:{
+                    id: item.s_routes_stage_id,
+                    name: item.s_routes_stage.stage_name
+                },
+                user:{
+                    id: item.d_user_id,
+                    name: item.user_name
+                },
+                date: item.stage_date.toLocaleDateString(),
+                time: item.stage_time.toLocaleTimeString(),
+            };
+        }).sort((a,b) => new Date(`${b.date} ${b.time}`) - new Date(`${a.date} ${a.time}`))); 
     }).catch(err => {
         res.status(500).send({
             message:
